--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -284,7 +284,7 @@ our Ruby code was stylistically accurate. Before we committed our code, Git
 fired off a Pre-commit hook that ran RuboCop. If RuboCop returned any warnings
 on our code, our code could not be committed.  Thus, our code was ensured to be
 up-to-date with the current stylistic guidelines.
-\\
+
 \subsection{Version control}
 Our version control management system was Git. By keeping the master branch as
 our production branch, our releases on AWS were always in sync with the latest
@@ -888,7 +888,7 @@ for a database with over 100,000 rows.\\
   and the tweet which most closely reflected the sentiment of a stock.
 
   \subsubsection{Performance testing results}
-  We did our Memcached testing on a single \texttt{m3.Large} instance.  As shown in Figure \ref{graph:memcached}, Memcached let us serve more uses per second, on average.  Figure \ref{graph:memcached_latency} shows the latency per request over the time of the tests.\\
+  We did our Memcached testing on a single \texttt{m3.Large} instance.  As shown in Figure \ref{graph:memcached}, Memcached let us serve more users per second, on average.  Figure \ref{graph:memcached_latency} shows the latency per request over the time of the tests.\\
 
   The little difference that Memcached made versus the MySQL caching method shows that the MySQL was not our main bottleneck.  If our database was our main bottleneck, we should have seen a larger performance improvement by switching to Memcached, as it significantly reduced the number of database hits per page load.
   \begin{figure}[H]
