--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -202,25 +202,25 @@ portfolio by giving them a head start on the market.
 \end{figure}
 
 \subsection{Our goal}
-The goal of Market Chirp is to quickly analyze the public's opinion of
-high-quality stocks through short notes on Twitter. Since the feed of tweets is
+The goal of Market Chirp is to quickly analyze the public's opinion of high-
+quality stocks through short notes on Twitter. Since the feed of tweets is
 queried in real time when a user searches for a certain stock, the sentiment
 analysis of a stock represents the public's current opinion of whether a stock
 is bullish or bearish. For example, if a stock's market price is on a downhill
 trend but its Twitter sentiment is on an uptrend, one may take that as an
-indication to buy the stock. This is because the temperature of a company in
-the eye of the public is often a good indicator of their stock's future
-performance on the market. Market Chirp's ultimate goal is not to predict the
-prices of the whole of the stock market, as the sentiment is based on a limited
-data set of people tweeting about a stock, but to give a recommendation of
-whether to buy the stock or not stock based on the public's opinion.
+indication to buy the stock. This is because the temperature of a company in the
+eye of the public is often a good indicator of their stock's future performance
+on the market. Market Chirp's ultimate goal is not to predict the prices of the
+whole stock market, as the sentiment is based on a limited data set of people
+tweeting about a stock, but to give a recommendation of whether to buy the stock
+or not stock based on the public's opinion.
 \\
 \subsection{How we do it}
 Market Chirp is implemented in Ruby on Rails (Ruby 2.2.1 and Rails 4.2.4). The
 back end data store is a relational database management system, in our case
 MySQL. Since the purpose of CS 188/219: Scalable Internet Services is to build
 and deploy a scalable web service, this report will therefore discuss the
-deployment, performance and scalability of Market Chirp.
+deployment, performance, and scalability of Market Chirp.
 \end{mainSection}
 
 \begin{mainSection}{Development Process}
@@ -290,8 +290,8 @@ Our version control management system was Git. By keeping the master branch as
 our production branch, our releases on AWS were always in sync with the latest
 release on our remote GitHub. We all worked on separate branches and used pull
 requests to merge our new code into the other branches, eventually merging into
-master. By constantly rebasing our branches, our development history is clean
-and looks as though only one person had developed it. Separating the features
+master. By constantly rebasing our branches, our development history was clean
+and looked as though only one person had developed it. Separating the features
 and bug fixes into their own respective branch allowed each developer to focus
 on his own feature without conflicting with other developers. After merging in
 the features, the application's version control history was simple and clean.
@@ -340,7 +340,7 @@ The gems we used include:
   between different aspects of our website. The user facing View provides the
   graphical interface with which they can see the result of their actions. When
   the user wants to interact with the application, say by submitting a form or
-  searching for a stock, they are using a Controller. Lastly there is the Model
+  searching for a stock, they are using a Controller. Lastly, there is the Model
   which takes instructions from the Controller and updates the user's View. The
   Model also interacts with our application's database, in our case by keeping
   track of user accounts, favorited stocks, and cached data.
@@ -552,7 +552,7 @@ for a database with over 100,000 rows.\\
   a useful simulation for comparing performance tests.  Another benefit of
   focusing on popular stocks is that we are guaranteed to always have enough
   Twitter data about each stock symbol.  Some of the less popular stock symbols
-  would have 5 tweets or less, making both the data inaccurate and the request
+  would have 5 tweets or fewer, making both the data inaccurate and the request
   too easy to strain the system.\\
 
 
@@ -912,7 +912,7 @@ for a database with over 100,000 rows.\\
   over the time of the tests.\\
 
   The little difference that Memcached made versus the MySQL caching method
-  shows that the MySQL was not our main bottleneck.If our database was our
+  shows that the MySQL was not our main bottleneck. If our database were our
   main bottleneck, we should have seen a larger performance improvement by
   switching to Memcached, as it significantly reduced the number of database
   hits per page load.
@@ -978,24 +978,24 @@ for a database with over 100,000 rows.\\
   From the development and testing of Market Chirp, we learned about both
   deploying an application and scaling it to handle the arrival of hundreds of
   concurrent visitors. We learned that increasing the scalability of an app is
-  very application specific, however the same basic approach can be taken to
-  get started in the right direction. These steps include ideas such as
-  caching, vertical scaling, and horizontal scaling. Once these are taken care
-  of, we have a tool set of techniques we can use to more selectively scale out
-  an application. Techniques such as query optimization, database sharding,
-  in memory caching, and read or write slaves.\\
+  very application specific, however the same basic approach can be taken to get
+  started in the right direction. These steps include ideas such as caching,
+  vertical scaling, and horizontal scaling. Once these are taken care of, we
+  have a tool set of techniques we can use to more selectively scale out an
+  application. Examples of some techniques are query optimization, database
+  sharding, in memory caching, and read or write slaves.\\
 
   Some of the things we figured out about Market Chirp specifically:
   \begin{itemize}
     \item Market Chirp scaled linearly with both more application servers and
-      more processing power.  Doubling either lead to double the users served
-      per second.
+      more processing power. Doubling either option lead to double the users
+      served per second.
     \item Using MySQL to cache computationally expensive data was an
       improvement over generating the same results each time, but it was far
       inferior to using Memcached.
     \item Memcached lead to improvements in response time because it reduced
       database hits which were much slower compared to fetching from memory.
-    \item Market Chirp is bottle necked more by CPU resources than database
+    \item Market Chirp was bottle necked more by CPU resources than database
       queries once caching was implemented.
     \item Reducing third-party API calls required for page loading improved
       performance by reducing the number of times our servers had to hit a
