--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -307,12 +307,10 @@ a substantial amount of time.
 
 \subsection{Important gems}
 We utilized several important rails gems that helped make the development of
-our application much easier. The gems listed below added important
-functionality such as user management and wrappers for APIs. By using the
-following gems, we were able to minimize the time spent developing and maximize
-the time spent scaling our system. The functionality provided in external
-gems is more robust and has been tested by others, improving the reliability of
-our services.
+our application much easier.  By using the following gems, we were able to
+minimize the time spent developing and maximize the time spent scaling our
+system. The functionality provided in external gems is more robust and has been
+tested by others, improving the reliability of our services.
 
 The gems we used include:
   \begin{enumerate}
